client/src/App.css
.signup {
  /* padding-top: 10px; */
}

.LoginJumbotron {
  background-color: #007BFF !important ;
}

.m-1 {
  background-color: black;
}

.intro {
  text-align: center;
  font-family: 'Alata', sans-serif;
  font-size-adjust: initial;
  text-decoration-color: white;
}

h1.pageHeader {
  margin: 2px;
  color: aliceblue;
  font-size: 50px
}

.insurance {
  text-align: center;
  color: white;
  font-family: 'Alata', sans-serif; 
  font-size: 55px;
  background-color: #007BFF !important;
}

footer {
  text-align-last: center;
}

.cardsHome {
  height: 150px;
  width: 150px;
  background: #007bff42;
  border-radius: 30px;
  display: flex;
}

.insurancecard {
  height: 100vh;
  background: #007bff4d;
  display: inline-flexbox;
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin: auto;
  padding: auto;
}

.carousel {
  width: 900px;
  height: 500px;
  align-items: center;
}

@media (max-width: 800px) {
  .carousel {
    width: auto;
    height: auto;
  }
}

.row {
  display: table;
  margin: 0px, 1px;
  align-self: start;
}

